Missing intrinsics for Math.ceil, floor, rint

XMLWordPrintable

    • b17
    • x86_64
    • linux_ubuntu

        ADDITIONAL SYSTEM INFORMATION :
        Ivy Bridge (SSE4.1, SSE4.2, AVX)
        11.0.3+7-Ubuntu-1ubuntu218.04.1
        JDK 11.0.3, OpenJDK 64-Bit Server VM

        A DESCRIPTION OF THE PROBLEM :
        The Math class lacks intrinsic implementations of the double precision fp rounding methods: ceil, floor, rint.

        On x86 SSE/AVX systems; It would be preferable to utilize instructions 'roundsd' rather than the default jdk implementation.
        Since there's also a packed variation, '(v)roundpd', the use of intrinsics may enable auto-vectorization where currently such optimization is obstructed by the default implementations of Math.ceil, floor, rint.


              Assignee:
              Jatin Bhateja
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              14 Start watching this issue

                Created:
                Updated:
                Resolved: